# second_telegram_bot

./: .gitignore  AGENTS.md  TODO.md  config.ini.example  docker-compose.yaml  dockerfile  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
bot/: admin.py  admin_commands.py  commands.py  config.py  constants.py  editing.py  logger_setup.py  logging.py  main.py  media_storage.py  messages.py  messages.toml  reloader.py  storage.py  workflow.py
test/: conftest.py  test_admin.py  test_admin_commands.py  test_admin_updates.py  test_config.py  test_list_and_editing.py  test_logging_and_config.py  test_media_storage.py  test_storage.py  test_workflow.py  utils.py
